--- a/styles/proto-repl-charts.less
+++ b/styles/proto-repl-charts.less
@@ -11,4 +11,10 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  .resizable-handle {
+    background-color: aliceblue;
+    text-align: center;
+    height: 16px !important;
+    margin-bottom: -5px !important;
+  }
 }
