--- a/styles/proto-repl-charts.less
+++ b/styles/proto-repl-charts.less
@@ -18,3 +18,11 @@
     margin-bottom: -5px !important;
   }
 }
+.proto-repl-charts-graph {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  div {
+    height: 100%;
+  }
+}
