Added functions for displaying graphs.

--- a/styles/proto-repl-charts.less
+++ b/styles/proto-repl-charts.less
@@ -22,6 +22,8 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  // vis.js puts a div within the container. It has no class or style and won't
+  // take up 100% of the height unless configured.
   div {
     height: 100%;
   }
